# crucible

./: .gitignore  README.md  pyproject.toml
application/commands/: capture_trace.py  create_rubric.py  evaluate_run.py  generate_report.py  register_agent.py
application/dtos/: evaluation_dto.py  report_dto.py  rubric_dto.py  trace_dto.py
application/orchestration/: evaluation_workflow.py
application/queries/: get_report.py  get_run.py  get_scores.py  list_agents.py
domain/entities/: agent.py  evaluation.py  report.py  rubric.py  trace.py
domain/events/: evaluation_events.py  event_base.py  report_events.py  trace_events.py
domain/ports/: agent_repository_port.py  evaluation_repository_port.py  event_bus_port.py  judge_port.py  notification_port.py  report_export_port.py  rubric_repository_port.py  storage_port.py  trace_repository_port.py
domain/services/: regression_detection_service.py  scoring_service.py
domain/value_objects/: judge_config.py  rubric_dimension.py  score.py  tool_call.py  trajectory_step.py
infrastructure/adapters/: claude_judge_adapter.py  event_bus_adapter.py  local_storage_adapter.py  openai_judge_adapter.py  report_export_adapter.py  webhook_notification_adapter.py
infrastructure/config/: dependency_injection.py  settings.py
infrastructure/mcp_servers/: crucible_server.py
infrastructure/repositories/: sqlite_repository.py
presentation/api/: app.py
presentation/cli/: main.py
rubric_templates/: coding_agent.yaml  customer_support_agent.yaml  data_extraction_agent.yaml  research_agent.yaml
tests/domain/: conftest.py  (+9 more)
(+26 files in other folders)
