[project]
name = "crucible"
version = "1.0.0"
description = "CRUCIBLE™ — Agentic Evaluation Harness. Heat-test your agents. Ship what survives."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Smeyatsky Labs Ltd" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "aiosqlite>=0.20.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
crucible = "presentation.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = [
    "domain",
    "application",
    "infrastructure",
    "presentation",
    "sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
